deploy: 2ec0311035cb616cded5c87fae328d75faaa086d

--- a/documents/REQ.html
+++ b/documents/REQ.html
@@ -97,7 +97,7 @@
 <p><em>Child links:</em> <a href="SPEC.html#SPEC003">SPEC003 PATCH</a></p>
 <h2 id="REQ004">1.4 GET <small>REQ004</small></h2>
 <p>The requests library shall have a function the user can use to peform GET requests.</p>
-<p><em>Child links:</em> <a href="SPEC.html#SPEC004">SPEC004 GET</a></p>
+<p><em>Child links:</em> <a href="SPEC.html#SPEC004">SPEC004 GET</a>, <a href="SPEC.html#SPEC008">SPEC008 Print GET</a></p>
 <h3 id="REQ007">1.4.1 basic-auth <small>REQ007</small></h3>
 <p>The requests library shall have a function the user can use to peform GET.basic-auth requests.</p>
 <p><em>Parent links:</em> <a href="REQ.html#REQ004">REQ004 GET</a></p>
