--- a/traceability.html
+++ b/traceability.html
@@ -91,10 +91,14 @@
   <td scope="row"><a href="documents/SPEC.html#SPEC004">SPEC004 GET</a></td>
 </tr>
 <tr class="alt">
+  <td scope="row"><a href="documents/REQ.html#REQ004">REQ004 GET</a></td>
+  <td scope="row"><a href="documents/SPEC.html#SPEC008">SPEC008 Print GET</a></td>
+</tr>
+<tr>
   <td scope="row"><a href="documents/REQ.html#REQ005">REQ005 DELETE</a></td>
   <td scope="row"><a href="documents/SPEC.html#SPEC005">SPEC005 DELETE</a></td>
 </tr>
-<tr>
+<tr class="alt">
   <td scope="row"><a href="documents/REQ.html#REQ006">REQ006 Documentation</a></td>
   <td scope="row"><a href="documents/SPEC.html#SPEC006">SPEC006 Documented</a></td>
 </tr>
