--- a/documents/SPEC.html
+++ b/documents/SPEC.html
@@ -41,6 +41,7 @@
                 <li><a class="dropdown-item" href="#SPEC002">1.2.1 PUT</a></li>
                 <li><a class="dropdown-item" href="#SPEC003">1.3.1 PATCH</a></li>
                 <li><a class="dropdown-item" href="#SPEC004">1.4.2 GET</a></li>
+                <li><a class="dropdown-item" href="#SPEC008">1.4.3 Print GET</a></li>
                 <li><a class="dropdown-item" href="#SPEC005">1.5.1 DELETE</a></li>
                 <li><a class="dropdown-item" href="#SPEC006">1.6.1 Documented</a></li>
             </ul>
@@ -86,21 +87,45 @@
       <H1><p>Test document for development of <em>Doorstop</em></p></H1>
       <h3 id="SPEC001">1.1.1 POST <small>SPEC001</small></h3>
 <p>The function POST works well</p>
+<blockquote>
+<p><code>tests/test_requests.py</code></p>
+</blockquote>
 <p><em>Parent links:</em> <a href="REQ.html#REQ001">REQ001 POST</a></p>
 <h3 id="SPEC007">1.1.2 print POST <small>SPEC007</small></h3>
 <p>Affiche avec print la donnée envoyée avec POST</p>
+<blockquote>
+<p><code>tests/test_requests.py</code></p>
+</blockquote>
 <p><em>Parent links:</em> <a href="REQ.html#REQ001">REQ001 POST</a></p>
 <h3 id="SPEC002">1.2.1 PUT <small>SPEC002</small></h3>
 <p>The function PUT works well</p>
+<blockquote>
+<p><code>tests/test_requests.py</code></p>
+</blockquote>
 <p><em>Parent links:</em> <a href="REQ.html#REQ002">REQ002 PUT</a></p>
 <h3 id="SPEC003">1.3.1 PATCH <small>SPEC003</small></h3>
 <p>The function PATCH works well</p>
+<blockquote>
+<p><code>tests/test_requests.py</code></p>
+</blockquote>
 <p><em>Parent links:</em> <a href="REQ.html#REQ003">REQ003 PATCH</a></p>
 <h3 id="SPEC004">1.4.2 GET <small>SPEC004</small></h3>
 <p>The function GET works well</p>
+<blockquote>
+<p><code>tests/test_requests.py</code></p>
+</blockquote>
+<p><em>Parent links:</em> <a href="REQ.html#REQ004">REQ004 GET</a></p>
+<h3 id="SPEC008">1.4.3 Print GET <small>SPEC008</small></h3>
+<p>Show what we GET using a Print</p>
+<blockquote>
+<p><code>tests/test_requests.py</code></p>
+</blockquote>
 <p><em>Parent links:</em> <a href="REQ.html#REQ004">REQ004 GET</a></p>
 <h3 id="SPEC005">1.5.1 DELETE <small>SPEC005</small></h3>
 <p>The function DELETE works well</p>
+<blockquote>
+<p><code>tests/test_requests.py</code></p>
+</blockquote>
 <p><em>Parent links:</em> <a href="REQ.html#REQ005">REQ005 DELETE</a></p>
 <h3 id="SPEC006">1.6.1 Documented <small>SPEC006</small></h3>
 <p>The library is well documented</p>
