deploy: a74328ec12d666d49df006cbe53fd9536b3a1df4

--- a/documents/SPEC.html
+++ b/documents/SPEC.html
@@ -92,7 +92,7 @@
 </blockquote>
 <p><em>Parent links:</em> <a href="REQ.html#REQ001">REQ001 POST</a></p>
 <h3 id="SPEC007">1.1.2 print POST <small>SPEC007</small></h3>
-<p>Affiche avec print la donnée envoyée avec POST</p>
+<p>Show what we POST using print</p>
 <blockquote>
 <p><code>tests/test_requests.py</code></p>
 </blockquote>
