deploy: d197ceb3c5b26d650781b9762978bd94366d165b

--- a/documents/SPEC.html
+++ b/documents/SPEC.html
@@ -92,7 +92,7 @@
 </blockquote>
 <p><em>Parent links:</em> <a href="REQ.html#REQ001">REQ001 POST</a></p>
 <h3 id="SPEC007">1.1.2 print POST <small>SPEC007</small></h3>
-<p>Show what we POST using print</p>
+<p>Show what we POST using a Print</p>
 <blockquote>
 <p><code>tests/test_requests.py</code></p>
 </blockquote>
